2007-10-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/NSArray+Utilities.m
	([NSArray -stringsWithFormat:format]): replace instances of NSNull
	with empty strings.

	* SoObjects/SOGo/NSDictionary+Utilities.m ([NSDictionary
	-keysWithFormat:keyFormat]): replace instances of NSNull with
	empty strings.

	* SoObjects/Contacts/SOGoContactLDAPFolder.m: if "displayName" is
	empty, use "c_cn" instead.

	* SoObjects/Mailer/SOGoMailAccount.m ([SOGoMailAccount -inboxFolderInContext:_ctx])
	([SOGoMailAccount -draftsFolderInContext:_ctx])
	([SOGoMailAccount -sentFolderInContext:_ctx]): no longer make use
	of the "SOGoSpecialFoldersInRoot" user defaults. The folders will
	no always be specified from the root instead of sometimes from the
	INBOX.

2007-10-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Common/UIxPageFrame.m ([UIxPageFrame -commonLocalizableStrings])
	([UIxPageFrame -productLocalizableStrings]): invoke the new
	+[SOGoUser language] method if the user is nil.

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser +language]): new method
	that returns any generically-found language.
	([SoUser -language]): modified to call the above.
	([SOGoUser -language]): modified to call the above if the user
	language has a null length.

	* SoObjects/Contacts/SOGoContactLDIFEntry.m ([SOGoContactLDIFEntry
	-davEntityTag]): modified to return the "hash" of the vCard string.

	* UI/MailerUI/UIxMailActions.m ([UIxMailActions
	-removeAllLabelsAction]): new method that removes all label flags
	from the associated message.
	([UIxMailActions -addLabel1Action]
	[UIxMailActions -addLabel2Action]
	[UIxMailActions -addLabel3Action
	[UIxMailActions -addLabel4Action]
	[UIxMailActions -addLabel5Action]): new methods that adds label
	flags to the associated message.
	([UIxMailActions -removeLabel1Action]
	[UIxMailActions -removeLabel2Action]
	[UIxMailActions -removeLabel3Action
	[UIxMailActions -removeLabel4Action]
	[UIxMailActions -removeLabel5Action]): new methods that removes