@@ -1,3 +1,9 @@
+2007-10-25  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* SoObjects/Mailer/NSData+Mail.[hm]: new extension module that
+	extends the NSData class with utility methods useful for handling
+	mail.
+
 2007-10-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* SoObjects/SOGo/NSArray+Utilities.m
